# phonologist-rs

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  flake.nix
examples/: check_size.rs
src/: data.rs  feature.rs  lib.rs  table.rs
