[package]
name = "phonologist"
description = "Parse phonemes in the International Phonetic Alphabet"
version = "1.0.1"
edition = "2021"
repository = "https://github.com/auctumnus/phonologist-rs"
categories = ["text-processing"]
keywords = ["linguistics", "phonetics", "ipa"]
license = "MIT OR Apache-2.0"
authors = ["Autumn <auctumnus@pm.me>"]
exclude = [".github/", "flake.nix", "flake.lock", ".envrc"]

[features]
serde = ["dep:serde"]

[dependencies]
phf = { version = "0.13.1", features = ["macros"] }
serde = { version = "1", optional = true }
strum = { version = "0.28.0", features = ["derive"] }
unicode-normalization = "0.1.25"
